Resolve conflicts introduced by manual resolution of merge